fix: height on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@
 .fcc {
 	@apply flex items-center justify-center;
 }
+.mobile-fit-height {
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
+}
 
 body {
 	background-color: black;
